Initial attempt at redesign

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{% if page.title %} {{ page.title }} | {% endif %} PHPR Community Docs</title>
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{site.url}}assets/style/phproad.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{site.url}}stylesheets/pygment_trac.css" media="screen" />
 
   </head>
 
