Fixed buttons js reference.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
 <!-- Java! ... No we aren't that stupid. JavaScripts it is! -->
 <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.js"></script>
 <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.accordion.js"></script>
-<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.button.js"></script>
+<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.buttons.js"></script>
 <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.navigation.js"></script>
 <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>
 <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.placeholder.js"></script>
