--- a/_includes/doc_list.html
+++ b/_includes/doc_list.html
@@ -4,15 +4,52 @@
             <dl class="tabs pill">
               <dd class="active"><a href="#user">User</a></dd>
               <dd><a href="#developer">Developer</a></dd>
-              <dd><a href="#reference">Reference</a></dd>
+              <dd><a href="#contributor">Contributor</a></dd>
             </dl>
           </div>
           <div class="wiki-toc-container">
             <ul class="tabs-content">
               <li id="userTab" class="wiki-tab-pane active">
-                <ul class="wiki-toc"><li><a href="/docs/phpr_overview">PHPR Overview</a></li><li><a href="/docs/table_of_contents">Table of Contents</a></li><li><a href="/docs/server_requirements">Server Requirements</a></li><li><a href="/docs/installation">Installation</a><ul class="wiki-toc"><li><a href="/docs/downloading_phpr">Downloading PHPR</a></li><li><a href="/docs/install_instructions">Install Instructions</a></li><li><a href="/docs/troubleshoot_install">Troubleshoot Install</a></li><li><a href="/docs/automation_set_up">Automation set up</a></li></ul></li><li><a href="/docs/basic_configuration">Basic Configuration</a><ul class="wiki-toc"><li><a href="/docs/common_settings">Global settings</a></li><li><a href="/docs/website_settings">Website settings</a></li></ul></li><li><a href="/docs/content_management">Content Management</a><ul class="wiki-toc"><li><a href="/docs/managing_themes">Managing Themes</a></li></ul></li><li><a href="/docs/maintenance">Maintenance</a><ul class="wiki-toc"><li><a href="/docs/performing_a_software_update">Performing a Software Update</a></li></ul></li></ul>              </li>
+                <ul class="wiki-toc">
+                  <li><a href="{{site.userurl}}phpr_overview.html">PHPR Overview</a></li>
+                  <li><a href="{{site.userurl}}table_of_contents.html">Table of Contents</a></li>
+                  <li><a href="{{site.userurl}}server_requirements.html">Server Requirements</a></li>
+                  <li><a href="{{site.userurl}}installation.html">Installation</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.userurl}}downloading_phpr.html">Downloading PHPR</a></li>
+                      <li><a href="{{site.userurl}}install_instructions.html">Install Instructions</a></li>
+                      <li><a href="{{site.userurl}}troubleshoot_install.html">Troubleshoot Install</a></li>
+                      <li><a href="{{site.userurl}}automation_set_up.html">Automation set up</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.userurl}}basic_configuration.html">Basic Configuration</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.userurl}}common_settings.html">Global settings</a></li>
+                      <li><a href="{{site.userurl}}website_settings.html">Website settings</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.userurl}}content_management.html">Content Management</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.userurl}}managing_themes.html">Managing Themes</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.userurl}}maintenance.html">Maintenance</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.userurl}}performing_a_software_update.html">Performing a Software Update</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li><!--Ending User tab-->
               <li id="developerTab" class="wiki-tab-pane">
-                <ul class="wiki-toc"><li><a href="/docs/design_patterns">Design Patterns</a></li><li><a href="/docs/php_style_guide">PHP Style Guide</a></li><li><a href="/docs/theme_tips_and_best_practices">Theme Tips &amp; Best Practices</a></li><li><a href="/docs/troubleshoot_development">Troubleshoot Development</a></li><li><a href="/docs/front_end">Front-end</a><ul class="wiki-toc"><li><a href="/docs/templates_pages_and_partials">Templates, Pages &amp; Partials</a></li><li><a href="/docs/content_blocks_and_language_strings">Content Blocks &amp; Strings</a></li><li><a href="/docs/combine_minify_javascript_and_css">Combine Javascript &amp; CSS</a></li><li><a href="/docs/javascript_framework">Javascript Framework</a></li></ul></li><li><a href="/docs/back_end">Back-end</a><ul class="wiki-toc"><li><a href="/docs/adding_menu_items">Adding Menu Items</a></li><li><a href="/docs/admin_lists">Lists</a><ul class="wiki-toc"><li><a href="/docs/creating_list_popups">Creating List Popups</a></li></ul></li></ul></li><li><a href="/docs/modules">Modules</a><ul class="wiki-toc"><li><a href="/docs/module_basics">Module Basics</a></li><li><a href="/docs/creating_a_module">Creating a Module</a></li><li><a href="/docs/access_points">Access Points</a></li><li><a href="/docs/using_events">Using Events</a></li></ul></li><li><a href="/docs/database">Database</a><ul class="wiki-toc"><li><a href="/docs/database_basics">Database Basics</a></li><li><a href="/docs/managing_table_structure">Managing Table Structure</a></li><li><a href="/docs/form_field_definitions">Form Field Definitions</a></li><li><a href="/docs/using_deferred_bindings">Using Deferred Bindings</a></li><li><a href="/docs/creating_a_data_feed">Creating a Data Feed</a></li><li><a href="/docs/database_files_and_images">File &amp; Image Storage</a></li></ul></li><li><a href="/docs/sessions">Sessions</a><ul class="wiki-toc"><li><a href="/docs/flash_messages">Flash Messages</a></li></ul></li><li><a href="/docs/file_system">File System</a><ul class="wiki-toc"><li><a href="/docs/directory_and_file_management">Directory &amp; File Management</a></li><li><a href="/docs/image_manipulation">Image Manipulation</a></li><li><a href="/docs/uploading_files">Uploading Files</a></li></ul></li><li><a href="/docs/common">Common</a><ul class="wiki-toc"><li><a href="/docs/configuration">Configuration</a></li><li><a href="/docs/notifications">Notifications</a></li><li><a href="/docs/trace_logging">Trace Logging</a></li></ul></li><li><a href="/docs/network">Network</a><ul class="wiki-toc"><li><a href="/docs/http_requests">HTTP Requests</a></li></ul></li></ul>              </li>
-            </ul>
+                <ul class="wiki-toc"></ul>
+              </li><!--Ending Developer tab-->
+              <li id="contributorTab" class="wiki-tab-pane">
+                <ul class="wiki-toc">
+                  <li><a href="{{site.conurl}}code.html">Code</a></li>
+                  <li><a href="{{site.conurl}}docs.html">Docs</a></li>
+                  <li><a href="{{site.conurl}}evangelism.html">Evangelize</a></li>
+                </ul>
+              </li><!--Ending Contributor tab-->
+            </ul><!--Ending tab content-->
           </div>
         </div>
