--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,95 +4,64 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{% if page.title %} {{ page.title }} | {% endif %} PHPR Community Docs</title>
-
     <link rel="stylesheet" type="text/css" href="{{site.url}}assets/styles/phproad.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{site.url}}assets/styles/pygment_trac.css" media="screen" />
-
   </head>
-
-<body class="docs-template docs-page">
+  <body class="docs-template docs-page">
     <div class="container" id="mainnav">
-      <nav role="navigation">
-        <div class="contain-to-grid">
-  <nav class="top-bar">
-    <ul>
-      <li class="name"><h1><a href="/">PHPR Community Wiki</a></h1></li>
-      <li class="toggle-topbar"><a href="#"></a></li>
-    </ul>
-    <section>
-      <ul class="right">
-        <li class="divider"></li>
-        <li class=""><a href="http://github.com/phproad" target="_blank" class="main">Github</a></li>
-        <li class="divider"></li>
-        <li><a href="http://phproad.com" target="_blank" class="main">Main site</a></li>
-                <li class="divider"></li>
-
-        <li class="has-button">
-          <a class="small button" href="/download">Download</a>
-        </li>
-      </ul>
-    </section>
-  </nav>
-</div>      </nav>
-    </div>
-
-
+      <div class="contain-to-grid">
+        <nav role="navigation" class="top-bar">
+          <ul>
+            <li class="name"><h1><a href="/">PHPR Community Wiki</a></h1></li>
+            <li class="toggle-topbar"><a href="#"></a></li>
+          </ul>
+          <section>
+            <ul class="right">
+              <li class="divider"></li>
+              <li class=""><a href="http://github.com/phproad" target="_blank" class="main">Github</a></li>
+              <li class="divider"></li>
+              <li><a href="http://phproad.com" target="_blank" class="main">Main site</a></li>
+              <li class="divider"></li>
+              <li class="has-button"><a class="small button" href="/download">Download</a></li>
+            </ul>
+          </section>
+        </nav>
+      </div><!--/.contain-to-grid-->
+    </div><!--/#mainnav-->
   <div class="container" id="content">
     <div class="row collapse">
       <div class="nine columns push-three">
         <div class="page_content">
-
-          <div id="p_docs_wiki_page"></div>
           <div id="page_documentation" class="wiki-default-content">
-
-            <div class="wiki-breadcrumb-container">
-
-
-  </div>
-
-
-<div class="wiki-content">
-
-{{content}}
-
-</div>
-
-
-          </div>
-
-        </div>
+            <div class="wiki-content">
+              {{content}}
+            </div><!--/.wiki-content-->
+          </div><!--/#page_documentation-->
+        </div><!--/#page_content-->
       </div>
       <div class="three columns pull-nine">
-      {% include doc_list.html %}
+        {% include doc_list.html %}
       </div>
+    </div><!--/.row-->
+  </div><!--/#content-->
+  <div id="footer">
+    <footer>
+      <div class="row">
+        <div class="nine columns">
+          <ul class="link-list">
+            <li><a href="http://github.com/phproad" target="_blank">Github</a></li>
+            <li><a class="facebook" href="http://facebook.com/phhproad" target="_blank"><i class="icon-facebook"></i>Facebook</a></li>
+            <li><a class="twitter" href="http://twitter.com/phproad" target="_blank"><i class="icon-twitter"></i>Twitter</a></li>
+          </ul>
+        </div>
+        <div class="three columns">
+          <p class="symbol float_right">PHPRoad</p>
+        </div>
+      </div>
+    </footer>
     </div>
-  </div>
-    <div id="footer">
-      <footer>
-        <div class="row">
-  <div class="nine columns">
-    <ul class="link-list">
-      <li><a href="/">Home</a></li>
-            <li><a href="/docs">Docs</a></li>
-      <li><a href="http://github.com/phproad" target="_blank">Github</a></li>
-              <li><a href="/account/login">Login</a></li>
-
-      <li><a class="facebook" href="http://facebook.com/phhproad" target="_blank"><i class="icon-facebook"></i>Facebook</a></li>
-      <li><a class="twitter" href="http://twitter.com/phproad" target="_blank"><i class="icon-twitter"></i>Twitter</a></li>
-    </ul>
-  </div>
-  <div class="three columns">
-    <p class="symbol float_right">PHPR</p>
-  </div>
-</div>      </footer>
-    </div>
-<!-- Java! ... No we aren't that stupid. JavaScripts it is! -->
-<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.js"></script>
-<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.accordion.js"></script>
-<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.buttons.js"></script>
-<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.navigation.js"></script>
-<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>
-<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.placeholder.js"></script>
+    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.js"></script>
+    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>
+    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.placeholder.js"></script>
   </body>
-
 </html>
