dev stuff. No worries

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,8 @@
     </footer>
     </div>
     <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.js"></script>
-    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>
+    <script type="text/javascript" src="{{sit.url}}assets/scripts/foundation.min.js"></script>
+    <!--<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>-->
     <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.placeholder.js"></script>
   </body>
 </html>
