--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,9 +60,11 @@
       </div>
     </footer>
     </div>
-    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.js"></script>
-    <script type="text/javascript" src="{{sit.url}}assets/scripts/foundation.min.js"></script>
-    <!--<script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>-->
-    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.placeholder.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>
+    <script>
+      $(document).foundationTabs();
+    </script>
+
   </body>
 </html>
