Some change in the default template. Can't remember

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
       <div class="contain-to-grid">
         <nav role="navigation" class="top-bar">
           <ul>
-            <li class="name"><h1><a href="/">PHPR Community Wiki</a></h1></li>
+            <li class="name"><h1><a href="{{site.url}}">PHPR Community Wiki</a></h1></li>
             <li class="toggle-topbar"><a href="#"></a></li>
           </ul>
           <section>
