Added dev links to doc list

--- a/_includes/doc_list.html
+++ b/_includes/doc_list.html
@@ -41,7 +41,78 @@
                 </ul>
               </li><!--Ending User tab-->
               <li id="developerTab" class="wiki-tab-pane">
-                <ul class="wiki-toc"></ul>
+                <ul class="wiki-toc">
+
+                  <li><a href="{{site.devurl}}design_patterns">Design Patterns</a></li>
+                  <li><a href="{{site.devurl}}php_style_guide">PHP Style Guide</a></li>
+                  <li><a href="{{site.devurl}}theme_tips_and_best_practices">Theme Tips &amp; Best Practices</a></li>
+                  <li><a href="{{site.devurl}}troubleshoot_development">Troubleshoot Development</a></li>
+                  <li><a href="{{site.devurl}}front_end">Front-end</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.devurl}}templates_pages_and_partials">Templates, Pages &amp; Partials</a></li>
+                      <li><a href="{{site.devurl}}content_blocks_and_language_strings">Content Blocks &amp; Strings</a></li>
+                      <li><a href="{{site.devurl}}combine_minify_javascript_and_css">Combine Javascript &amp; CSS</a></li>
+                      <li><a href="{{site.devurl}}javascript_framework">Javascript Framework</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}back_end">Back-end</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.devurl}}adding_menu_items">Adding Menu Items</a></li>
+                      <li><a href="{{site.devurl}}admin_lists">Lists</a>
+                        <ul class="wiki-toc">
+                          <li><a href="{{site.devurl}}creating_list_popups">Creating List Popups</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}javascript">JavaScript</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.devurl}}sending_ajax_requests">Sending AJAX requests</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}modules">Modules</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.devurl}}module_basics">Module Basics</a></li>
+                      <li><a href="{{site.devurl}}creating_a_module">Creating a Module</a></li>
+                      <li><a href="{{site.devurl}}access_points">Access Points</a></li>
+                      <li><a href="{{site.devurl}}using_events">Using Events</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}database">Database</a>
+                    <ul class="wiki-toc">
+                        <li><a href="{{site.devurl}}database_basics">Database Basics</a></li>
+                        <li><a href="{{site.devurl}}managing_table_structure">Managing Table Structure</a></li>
+                        <li><a href="{{site.devurl}}form_field_definitions">Form Field Definitions</a></li>
+                        <li><a href="{{site.devurl}}using_deferred_bindings">Using Deferred Bindings</a></li>
+                        <li><a href="{{site.devurl}}creating_a_data_feed">Creating a Data Feed</a></li>
+                        <li><a href="{{site.devurl}}database_files_and_images">File &amp; Image Storage</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}sessions">Sessions</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.devurl}}flash_messages">Flash Messages</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}file_system">File System</a>
+                    <ul class="wiki-toc">
+                       <li><a href="{{site.devurl}}directory_and_file_management">Directory &amp; File Management</a></li>
+                       <li><a href="{{site.devurl}}image_manipulation">Image Manipulation</a></li><li><a href="{{site.devurl}}uploading_files">Uploading Files</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}common">Common</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.devurl}}configuration">Configuration</a></li>
+                      <li><a href="{{site.devurl}}notifications">Notifications</a></li>
+                      <li><a href="{{site.devurl}}trace_logging">Trace Logging</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="{{site.devurl}}network">Network</a>
+                    <ul class="wiki-toc">
+                      <li><a href="{{site.devurl}}http_requests">HTTP Requests</a></li>
+                    <ul>
+                  </li>
+
+                </ul>
               </li><!--Ending Developer tab-->
               <li id="contributorTab" class="wiki-tab-pane">
                 <ul class="wiki-toc">
