Removed uneccesary scripts, added treeview plugin for initial testing.

--- a/_includes/doc_list.html
+++ b/_includes/doc_list.html
@@ -1,5 +1,4 @@
         <div class="docs-sidenav" id="docs-sidenav">
-
           <div class="wiki-nav-container">
             <dl class="tabs pill">
               <dd class="active"><a href="#user">User</a></dd>
@@ -45,13 +44,13 @@
 
                   <li><a href="{{site.devurl}}design_patterns">Design Patterns</a></li>
                   <li><a href="{{site.devurl}}php_style_guide">PHP Style Guide</a></li>
-                  <li><a href="{{site.devurl}}theme_tips_and_best_practices">Theme Tips &amp; Best Practices</a></li>
+                  <li><a href="{{site.devurl}}theme_tips_and_best_practices">Theme Tips & Best Practices</a></li>
                   <li><a href="{{site.devurl}}troubleshoot_development">Troubleshoot Development</a></li>
                   <li><a href="{{site.devurl}}front_end">Front-end</a>
                     <ul class="wiki-toc">
-                      <li><a href="{{site.devurl}}templates_pages_and_partials">Templates, Pages &amp; Partials</a></li>
-                      <li><a href="{{site.devurl}}content_blocks_and_language_strings">Content Blocks &amp; Strings</a></li>
-                      <li><a href="{{site.devurl}}combine_minify_javascript_and_css">Combine Javascript &amp; CSS</a></li>
+                      <li><a href="{{site.devurl}}templates_pages_and_partials">Templates, Pages & Partials</a></li>
+                      <li><a href="{{site.devurl}}content_blocks_and_language_strings">Content Blocks & Strings</a></li>
+                      <li><a href="{{site.devurl}}combine_minify_javascript_and_css">Combine Javascript & CSS</a></li>
                       <li><a href="{{site.devurl}}javascript_framework">Javascript Framework</a></li>
                     </ul>
                   </li>
@@ -85,7 +84,7 @@
                         <li><a href="{{site.devurl}}form_field_definitions">Form Field Definitions</a></li>
                         <li><a href="{{site.devurl}}using_deferred_bindings">Using Deferred Bindings</a></li>
                         <li><a href="{{site.devurl}}creating_a_data_feed">Creating a Data Feed</a></li>
-                        <li><a href="{{site.devurl}}database_files_and_images">File &amp; Image Storage</a></li>
+                        <li><a href="{{site.devurl}}database_files_and_images">File & Image Storage</a></li>
                     </ul>
                   </li>
                   <li><a href="{{site.devurl}}sessions">Sessions</a>
@@ -95,8 +94,9 @@
                   </li>
                   <li><a href="{{site.devurl}}file_system">File System</a>
                     <ul class="wiki-toc">
-                       <li><a href="{{site.devurl}}directory_and_file_management">Directory &amp; File Management</a></li>
-                       <li><a href="{{site.devurl}}image_manipulation">Image Manipulation</a></li><li><a href="{{site.devurl}}uploading_files">Uploading Files</a></li>
+                       <li><a href="{{site.devurl}}directory_and_file_management">Directory & File Management</a></li>
+                       <li><a href="{{site.devurl}}image_manipulation">Image Manipulation</a></li>
+                       <li><a href="{{site.devurl}}uploading_files">Uploading Files</a></li>
                     </ul>
                   </li>
                   <li><a href="{{site.devurl}}common">Common</a>
