--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{% if page.title %} {{ page.title }} | {% endif %} PHPR Community Docs</title>
-    <link rel="stylesheet" type="text/css" href="{{site.url}}assets/styles/phproad.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="{{site.url}}assets/styles/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{site.cssurl}}phproad.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{site.cssurl}}pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{site.cssurl}}treeview.css"
   </head>
   <body class="docs-template docs-page">
     <div class="container" id="mainnav">
@@ -61,7 +62,8 @@
     </footer>
     </div>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script type="text/javascript" src="{{site.url}}assets/scripts/jquery.foundation.tabs.js"></script>
+    <script type="text/javascript" src="{{site.jsurl}}jquery.foundation.tabs.js"></script>
+    <script type="text/javascript" src="{{site.jsurl}}treeview.js"></script>
     <script>
       $(document).foundationTabs();
     </script>
