Fixed new treeview style link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{% if page.title %} {{ page.title }} | {% endif %} PHPR Community Docs</title>
     <link rel="stylesheet" type="text/css" href="{{site.cssurl}}phproad.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{site.cssurl}}pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="{{site.cssurl}}treeview.css"
+    <link rel="stylesheet" type="text/css" href="{{site.cssurl}}treeview.css"/>
   </head>
   <body class="docs-template docs-page">
     <div class="container" id="mainnav">
