--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,5 +62,8 @@
     </div>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script type="text/javascript" src="{{site.jsurl}}jquery.foundation.tabs.js"></script>
+    <script type="text/javascript">
+      $(document).foundationTabs();
+    </script>
   </body>
 </html>
